crates/app/src/commands/init/snapshots/moon_app__commands__init__typescript__tests__renders_minimal.snap
---
source: crates/app/src/commands/init/typescript.rs
expression: render_template(context).unwrap()
---
typescript:
  syncProjectReferences: false
